--- a/package.json
+++ b/package.json
@@ -28,20 +28,16 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-connect": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.12.2",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-qunit": "~0.2.2",
     "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-graphviz": "^0.1.0",
+    "grunt-jade": "^0.5.1",
     "grunt-zip": "~0.7.0"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/hakimel/reveal.js/blob/master/LICENSE"
-    }
-  ]
+  "license": "(MIT OR Apache-2.0)"
 }
